<resources>
    <string name="action_clock">00:00</string>
    <string name="action_settings">Settings</string>
    <string name="added_water_hint">0.00</string>
    <string name="added_water_label">Added Water</string>
    <string name="amount_label">Amount</string>
    <string name="amount_text">0.00</string>
    <string name="app_name">ADPU</string>
    <string name="code_hint">000</string>
    <string name="code_label">Code</string>
    <string name="date_separator">/</string>
    <string name="fat_hint">0.00</string>
    <string name="fat_label">Fat</string>
    <string name="name_label">Name</string>
    <string name="rate_label">Rate</string>
    <string name="rate_text">0.00</string>
    <string name="snf_hint">0.00</string>
    <string name="snf_label">SNF</string>
    <string name="sno_label">Serial No.</string>
    <string name="title_activity_add_farmer_member">AddFarmerMember</string>
    <string name="title_activity_duplicate_slip">DuplicateSlipActivity</string>
    <string name="title_activity_member_ledger">Member Ledger</string>
    <string name="title_activity_payment_summary">PaymentSummaryActivity</string>
    <string name="title_activity_print_preview">PrintPreviewActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_shift_reports">ShiftReportsActivity</string>
    <string name="weight_hint">0.00</string>
    <string name="weight_label">Weight</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="print_preview">Print Preview</string>
    <string name="image">Image</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email Address</string>
    <string name="title_activity_fat_snf_range">FatSnfRangeActivity</string>
    <string name="cow">Cow</string>
    <string name="buffalo">Buffalo</string>
    <string name="range_separator">--</string>
    <string name="analyzer">Analyzer</string>
    <string name="analyzer_prompt">Select Analyzer</string>
    <string name="printer">Printer</string>
    <string name="shifttime">Shift Time</string>
    <string name="measurementunit">Measurement Unit</string>
    <string name="dairyname">Dairy Name</string>
    <string name="title_activity_add_rate_chart">AddRateChartActivity</string>
    <string name="footer">Footer</string>
    <string name="cow_fat_range">Cow FAT range:</string>
    <string name="cow_snf_range">Cow SNF range:</string>
    <string name="buffalo_fat_range">Buffalo FAT range:</string>
    <string name="buffalo_snf_range">Buffalo SNF range:</string>
    <string name="weight">Weight</string>
    <string name="menu">Menu</string>
    <string name="title_activity_add_price">AddPriceActivity</string>
    <string name="title_activity_show_rate_chart">ShowRateChartActivity</string>
    <string name="title_activity_edit_rate_chart">EditRateChartActivity</string>
    <string name="title_activity_manual_rate_chart">ManualRateChartActivity</string>
    <string name="title_activity_file_rate_chart">FileRateChartActivity</string>
    <string name="title_activity_formula_rate_chart">FormulaRateChartActivity</string>
    <string name="title_activity_sync">SyncActivity</string>
    <string name="password">Password</string>
    <string name="title_activity_device_info">DeviceInfoActivity</string>
    <string name="dairycode">Dairy Code:</string>
    <string name="routecode">Route Code:</string>
    <string name="villagecode">Village Code:</string>
    <string name="centercode">Center Code</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="oldpass">Old Password</string>
    <string name="newpass">New Password</string>
    <string name="repeatpass">Repeat Password</string>
    <string name="title_activity_rate_chart_online">RateChartOnlineActivity</string>
    <string name="downloading">Downloading...</string>
</resources>
