<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmos.adpu.SettingsActivity">
    <!--LinearLayout
        android:id="@+id/s_header"
        android:background="@drawable/settings_header_bg"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height">
        <TextView
            android:layout_marginTop="-15dp"
            android:text="Settings"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout-->
    <RelativeLayout
        android:id="@+id/s_cow_rl"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/s_cow_fat_range_ll"
            android:background="#ffeeeeee"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="4.0">
            <TextView
                android:textSize="@dimen/text_size"
                android:id="@+id/s_cow_fat_range_tv"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/cow_fat_range"
                android:layout_weight="2.0" />
            <EditText
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:gravity="center"
                android:id="@+id/s_cow_fat_range_from_et"
                android:background="@drawable/focused"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.75" />
            <TextView
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/range_separator"
                android:layout_weight="0.5" />
            <EditText
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:gravity="center"
                android:id="@+id/s_cow_fat_range_to_et"
                android:background="@drawable/unfocused"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.75" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/s_cow_snf_range_ll"
            android:layout_below="@+id/s_cow_fat_range_ll"
            android:background="#ffcccccc"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="4.0">
            <TextView
                android:textSize="@dimen/text_size"
                android:id="@+id/s_cow_snf_fat_range_tv"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/cow_snf_range"
                android:layout_weight="2.0" />
            <EditText
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:gravity="center"
                android:id="@+id/s_cow_snf_range_from_et"
                android:background="@drawable/unfocused"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.75" />
            <TextView
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/range_separator"
                android:layout_weight="0.5" />
            <EditText
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:gravity="center"
                android:id="@+id/s_cow_snf_range_to_et"
                android:background="@drawable/unfocused"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.75" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/s_buffalo_rl"
        android:layout_below="@+id/s_cow_rl"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/s_buffalo_fat_range_ll"
            android:background="#ffeeeeee"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="4.0">
            <TextView
                android:textSize="@dimen/text_size"
                android:id="@+id/s_buffalo_fat_range_tv"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/buffalo_fat_range"
                android:layout_weight="2.0" />
            <EditText
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:gravity="center"
                android:id="@+id/s_buffalo_fat_range_from_et"
                android:background="@drawable/unfocused"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.75" />
            <TextView
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/range_separator"
                android:layout_weight="0.5" />
            <EditText
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:gravity="center"
                android:id="@+id/s_buffalo_fat_range_to_et"
                android:background="@drawable/unfocused"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.75" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/s_buffalo_snf_range_ll"
            android:layout_below="@+id/s_buffalo_fat_range_ll"
            android:background="#ffcccccc"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="4.0">
            <TextView
                android:textSize="@dimen/text_size"
                android:id="@+id/s_snf_fat_range_tv"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/buffalo_snf_range"
                android:layout_weight="2.0" />
            <EditText
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:gravity="center"
                android:id="@+id/s_buffalo_snf_range_from_et"
                android:background="@drawable/unfocused"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.75" />
            <TextView
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/range_separator"
                android:layout_weight="0.5" />
            <EditText
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:gravity="center"
                android:id="@+id/s_buffalo_snf_range_to_et"
                android:background="@drawable/unfocused"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.75" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/s_analyzer_ll"
        android:layout_below="@+id/s_buffalo_rl"
        android:background="#ffeeeeee"
        android:padding="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2.0">
        <TextView
            android:textSize="@dimen/text_size"
            android:id="@+id/s_analyzer_tv"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/analyzer"
            android:layout_weight="1.0" />
        <RelativeLayout
            android:id="@+id/s_analyzer_rl"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/unfocused"
            android:layout_weight="1.0">
            <Spinner
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:prompt="@string/analyzer_prompt"
                android:gravity="center"
                android:id="@+id/s_analyzer_dd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/s_weight_ll"
        android:layout_below="@+id/s_analyzer_ll"
        android:background="#ffcccccc"
        android:padding="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2.0">
        <TextView
            android:textSize="@dimen/text_size"
            android:id="@+id/s_weight_tv"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_weight="1.0" />
        <RelativeLayout
            android:id="@+id/s_weight_rl"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/unfocused"
            android:layout_weight="1.0">
            <Spinner
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:prompt="@string/analyzer_prompt"
                android:gravity="center"
                android:id="@+id/s_weight_dd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/s_printer_ll"
        android:layout_below="@+id/s_weight_ll"
        android:background="#ffcccccc"
        android:padding="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2.0">
        <TextView
            android:textSize="@dimen/text_size"
            android:id="@+id/s_printer_tv"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/printer"
            android:layout_weight="1.0" />
        <RelativeLayout
            android:id="@+id/s_printer_rl"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/unfocused"
            android:layout_weight="1.0">
            <Spinner
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:prompt="@string/analyzer_prompt"
                android:gravity="center"
                android:id="@+id/s_printer_dd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/s_shifttime_ll"
        android:layout_below="@+id/s_printer_ll"
        android:background="#ffeeeeee"
        android:padding="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2.0">
        <TextView
            android:textSize="@dimen/text_size"
            android:id="@+id/s_shifttime_tv"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/shifttime"
            android:layout_weight="1.0" />
        <RelativeLayout
            android:id="@+id/s_shifttime_rl"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/unfocused"
            android:layout_weight="1.0">
            <Spinner
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:prompt="@string/analyzer_prompt"
                android:gravity="center"
                android:id="@+id/s_shifttime_dd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/s_measurementunit_ll"
        android:layout_below="@+id/s_shifttime_ll"
        android:background="#ffcccccc"
        android:padding="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2.0">
        <TextView
            android:textSize="@dimen/text_size"
            android:id="@+id/s_measurementunit_tv"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/measurementunit"
            android:layout_weight="1.0" />
        <RelativeLayout
            android:id="@+id/s_measurementunit_rl"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/unfocused"
            android:layout_weight="1.0">
            <Spinner
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:prompt="@string/analyzer_prompt"
                android:gravity="center"
                android:id="@+id/s_measurementunit_dd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/s_dairyname_ll"
        android:layout_below="@+id/s_measurementunit_ll"
        android:background="#ffeeeeee"
        android:padding="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2.0">
        <TextView
            android:textSize="@dimen/text_size"
            android:id="@+id/s_dairyname_tv"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/dairyname"
            android:layout_weight="1.0" />
        <EditText
            android:singleLine="true"
            android:maxLength="32"
            android:textSize="@dimen/text_size"
            android:textColor="#ff000000"
            android:enabled="false"
            android:id="@+id/s_dairyname_dd"
            android:background="@drawable/unfocused"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/s_footer_ll"
        android:layout_below="@+id/s_dairyname_ll"
        android:background="#ffeeeeee"
        android:padding="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2.0">
        <TextView
            android:textSize="@dimen/text_size"
            android:id="@+id/s_footer_tv"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/footer"
            android:layout_weight="1.0" />
        <EditText
            android:singleLine="true"
            android:maxLength="32"
            android:textSize="@dimen/text_size"
            android:textColor="#ff000000"
            android:enabled="false"
            android:id="@+id/s_footer_dd"
            android:background="@drawable/unfocused"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
    </LinearLayout>
    <Button
        android:id="@+id/s_save_b"
        android:text="Please Enter to Save"
        android:layout_below="@+id/s_footer_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
